Updated dark modea among other things

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -23,9 +23,9 @@
     <link rel="stylesheet" href="styles/larger.css">      <!-- Runs Last -->
 
                                  <!-- Java Script -->
-    <script src="scripts/hamburger.js" defer> </script>
+    <!-- <script src="scripts/hamburger.js" defer> </script> -->
     <script src="scripts/windchill.js" defer></script>
-    <script src="scripts/businesses.js" defer></script>
+    <script src="scripts/directory.js" defer></script>
                                     
                                     <!-- favicon -->
     <link rel="icon" href="images/favicon_io/favicon-16x16.png">
@@ -55,10 +55,13 @@
 
     <img src="images/smaller-pocatello.webp" alt="Pocatello Idaho" class="pocatello_img">
 
-    <h1 class="title">Pocatello Businesses</h1>
+    <h1 class="title">Pocatello members</h1>
 
-    <main class="business_main">
-        <div id="business_cards">            
+    <main class="members_main"> 
+
+        <div id="members_cards"> 
+            <button id="grid">Grid</button> 
+            <button id="list">List</button>   
         </div>
     </main>
       
