--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -24,6 +24,7 @@
                                  <!-- Java Script -->
     <script src="scripts/hamburger.js" defer></script>
     <script src="scripts/discover.js" defer></script>
+    <script src="scripts/header-footer.js" defer></script>
                                     
                                     <!-- favicon -->
     <link rel="icon" href="images/favicon_io/favicon-16x16.png">
@@ -32,6 +33,7 @@
 
 <body>
     <header>
+        <button id="dark-mode"></button>
         <div class="logo">
             <img src="images/Poky-logo.jpg" alt="logo image">
             <!-- <img src="images/pocatello.jpg"> -->
