--- a/chamber/join.html
+++ b/chamber/join.html
@@ -24,6 +24,7 @@
                                      <!-- Java Script -->
         <script src="scripts/hamburger.js" defer> </script>
         <script src="scripts/windchill.js" defer></script>
+        <script src="scripts/header-footer.js" defer></script>
                                         
                                         <!-- favicon -->
         <link rel="icon" href="images/favicon_io/favicon-16x16.png">
@@ -33,6 +34,7 @@
 <body>
 
     <header>
+        <button id="dark-mode"></button>
         <div class="logo">
             <img src="images/poky-logo.webp" alt="logo image">
             <h1>Pocatello Idaho Chamber of Commerce</h1>
