--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -26,6 +26,7 @@
     <!-- <script src="scripts/hamburger.js" defer> </script> -->
     <script src="scripts/windchill.js" defer></script>
     <script src="scripts/directory.js" defer></script>
+    <script src="scripts/header-footer.js" defer></script>
                                     
                                     <!-- favicon -->
     <link rel="icon" href="images/favicon_io/favicon-16x16.png">
@@ -34,6 +35,7 @@
 
 <body>
     <header>
+        <button id="dark-mode"></button>
         <div class="logo">
             <img src="images/poky-logo.webp" alt="logo image">
             <h1>Pocatello Idaho Chamber of Commerce</h1>
