--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,4 +1,5 @@
 <!--  Chamber Directory -->
+  <!-- TO DO/to do: Download images to local file and change to webp's -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,7 +25,6 @@
 
                                  <!-- Java Script -->
     <!-- <script src="scripts/hamburger.js" defer> </script> -->
-    <script src="scripts/windchill.js" defer></script>
     <script src="scripts/directory.js" defer></script>
     <script src="scripts/header-footer.js" defer></script>
                                     
@@ -58,13 +58,13 @@
     <img src="images/smaller-pocatello.webp" alt="Pocatello Idaho" class="pocatello_img">
 
     <h1 class="title">Pocatello members</h1>
-
+<!-- Look at professors code tos ee whats different -->
     <main class="members_main"> 
-
-        <div id="members_cards"> 
+        <div id="members_buttons"> 
             <button id="grid">Grid</button> 
             <button id="list">List</button>   
         </div>
+        <div id="members_cards"></div>
     </main>
       
     <footer>
