Updated JSON images

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -21,7 +21,7 @@
 
 <body>
     <header> 
-        <img src="images/Pocatello" alt="Pocatello">
+        <img src="./images/favicon-16x16.png" alt="Pocatello">
         <h1>Chamber of Commerce Site Plan</h1>
     </header>
     
