validated css and updated mebers.json

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -14,7 +14,7 @@
     <meta property = "og:title" content = "Pocatello Idaho USA Chamber of Commerce - discover page" >
     <meta property = "og:type"  content = "Website" >
     <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/chamber/discover.html"> 
-    <meta property = "og:image" content = "images/poky-logo.jpg" >
+    <meta property = "og:image" content = "images/poky-logo.webp" >
 
                                     <!-- CSS -->
     <link rel="stylesheet" href="styles/normalize.css" >  <!-- Runs first -->
@@ -36,7 +36,7 @@
     <header>
         <button id="dark-mode"></button>
         <div class="logo">
-            <img src="images/Poky-logo.jpg" alt="logo image">
+            <img src="images/poky-logo.webp" alt="logo image">
             <!-- <img src="images/pocatello.jpg"> -->
             <!-- <img src="https://pocatello.gov/ImageRepository/Document?documentID=7660" alt="Pocatello"> -->
             <h1>Pocatello Idaho Chamber of Commerce</h1>
@@ -73,7 +73,7 @@
       
         
     <footer>
-        <img src="images/poky-logo.jpg" alt="logo image">
+        <img src="images/poky-logo.webp" alt="logo image">
         <p>Pocatello Idaho Chamber of Commerce</p>
         <p>123 main street</p>
         <p>info@dontactuallyemail.com</p>
