--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -58,19 +58,20 @@
     <img src="images/smaller-pocatello.webp" alt="Pocatello Idaho" class="pocatello_img">
 
     <h1 class="title">Pocatello members</h1>
-<!-- Look at professors code tos ee whats different -->
+<!-- Look at professors code to see whats different -->
     <main class="members_main"> 
         <div id="members_buttons"> 
-            <button id="grid">Grid</button> 
-            <button id="list">List</button>   
+            <button id="members_grid">Grid</button> 
+            <button id="members_list">List</button>   
         </div>
         <div id="members_cards"></div>
     </main>
       
     <footer>
         <div class="logo_img" >
-        <img src="images/poky-logo.webp" alt="logo image">
+            <img src="images/poky-logo.webp" alt="logo image">
         </div>
+
         <p>Pocatello Idaho Chamber of Commerce</p>
         <p>123 main street</p>
         <p>info@dontactuallyemail.com</p>
