fixed constrast issues and date

--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@ for hamburger menu use " ☰ "  -->
         </ul>
     </nav>
 
-   
-
     <main>
         <div class="temple">
             <picture>                
@@ -127,8 +125,12 @@ for hamburger menu use " ☰ "  -->
             <section class="card">
                 <h3>Information</h3>
                 <p>Weather Information: Placeholder</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis saepe fugit veniam laborum, illo provident optio sapiente laboriosam magnam modi quos dicta illum perspiciatis nostrum dolore temporibus et accusantium rerum.</p>
-                <p> </p>
+                <p></p>
+                <p>Number of visits: <span id="visits"> </span></p>
+
+                <div>
+                    <p id="discover-message"></p>
+                </div> 
 
             </section>
         </div>
@@ -143,9 +145,6 @@ for hamburger menu use " ☰ "  -->
         referrerpolicy="no-referrer-when-downgrade">
         </iframe>
     </main>
-    
-   
-    
 
     <footer>
         <p>&copy; <span id='currentYear'></span>│Cayleigh Leishman │ Idaho, USA" │  </p> <!-- &copy is suposed to be the code that will give you the ©  symbol -->    
