--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,7 +38,7 @@
 <body>
     
     <header>
-        <button id="dark-mode"></button>
+        <button title="dark mode" id="dark-mode"></button>
         <div class="logo">
             <img src="images/poky-logo.webp" alt="logo image">
             <h1>Pocatello Idaho Chamber of Commerce</h1>
