--- a/form.html
+++ b/form.html
@@ -41,7 +41,7 @@
     <header>
         <button title="dark mode" id="dark-mode"></button>
         <div class="logo">
-            <img src="images/poky-logo.webp" alt="logo image">
+            <img src="images/cayleigh-small.webp" alt="cayleigh's face">
             <h1>Pocatello Idaho Chamber of Commerce</h1>
         </div>
 
@@ -91,7 +91,7 @@
         
     <footer>
         <div class="logo_img" >
-        <img src="images/poky-logo.webp" alt="logo image">
+        <img src="images/cayleigh-small.webp" alt="cayleigh's face">
         </div>
         <p>Pocatello Idaho Chamber of Commerce</p>
         <p>123 main street</p>
