--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ for hamburger menu use " ☰ "  -->
     <!--Lesson 2 Activity *mostly done in CSS* -->
     <!-- connects to .css files in Styles folder -->  
     <link rel="stylesheet" href="styles/normalize.css" >  <!-- Runs first -->
+    <link rel="stylesheet" href="styles/reset.css" >
     <link rel="stylesheet" href="styles/base.css">  <!--I also added a reset.css for lesson 2. See reset.css for more info -->
     <link rel="stylesheet" href="styles/larger.css">
 
