--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,4 +1,5 @@
 <!-- CHAMBER Page -->
+ <!-- TO DO: delete the three pictures of people smiling at desk its no longer needed -->
 
 <!DOCTYPE html>
 <html lang="en">
