--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -65,7 +65,7 @@
             <button id="members_grid">Grid</button> 
             <button id="members_list">List</button>   
         </div>
-        <div id="members_cards"></div>
+        <div id="members_data" class="members_cards"></div>
     </main>
       
     <footer>
