--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,4 +1,5 @@
 <!-- Chamber Discover page -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -64,7 +65,7 @@
           <a href="https://pocatello.gov/632/Demographics" >Pocatello Demographic source</a>
           <h3><span id="visit-message"></span></h3>
         </section>           
-           
+        <section class="discover-images">
         <section class="discover-image">
           <div>
             <picture>
