update discover and main tags

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -60,10 +60,7 @@
 
     </nav>
     
-    <div class="hero-pocatello">
-        <img src="images/smaller-pocatello.webp" alt="Pocatello Idaho" class="pocatello_img">
-        <button>Join the Chamber</button><!-- See header-footer.js for how to use this button to open the join page. -->
-    </div>
+  
 <!-- Week 6 stuff -->
 <!---->
 <div class = "picture">
@@ -80,7 +77,13 @@
     <p id="hero_label"></p>
 </div>
  
-    <main>
+    <main class="home_main">
+
+        <div class="hero-pocatello">
+            <img src="images/smaller-pocatello.webp" alt="Pocatello Idaho" class="pocatello_img">
+            <button>Join the Chamber</button><!-- See header-footer.js for how to use this button to open the join page. -->
+        </div>
+
         <section class="current_events">
             <h2>Current Events</h2>
 
