--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,4 +1,7 @@
 <!--  Chamber Directory -->
+<!-- resize images to less than 350px -->
+ <!-- change font size for h2  -->
+
 
 <!DOCTYPE html>
 <html lang="en">
