--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,27 +59,10 @@
         </ul>
 
     </nav>
-    
-  
-<!-- Week 6 stuff -->
-<!---->
-<div class = "picture">
-
-
-    <picture>
-        <!-- TO DO: Change to webp format not jpeg -->
-         <!-- Source won't allow me to put in Alt when i use validator hence why alt tag is in comments -->
-        <source media="(min-width:800px)" srcset="images/wdd230-large-org.jpg" > <!--alt="three people chatting"-->
-        <source media ="(min-width:600px)" srcset="images/wdd230-medium-org.jpg"> <!--alt="three people chatting"-->
-        <source media="(min-width:300px)" srcset="images/wdd230-small-org.jpg" > <!--alt="three people chatting"-->
-        <img src="images/wdd230-small-org.jpg" alt="three people cahtting">
-    </picture> 
-    <p id="hero_label"></p>
-</div>
- 
+     
     <main class="home_main">
 
-        <div class="hero-pocatello">
+        <div class="hero_pocatello">
             <img src="images/smaller-pocatello.webp" alt="Pocatello Idaho" class="pocatello_img">
             <button>Join the Chamber</button><!-- See header-footer.js for how to use this button to open the join page. -->
         </div>
