--- a/chamber/join.html
+++ b/chamber/join.html
@@ -55,6 +55,10 @@
         </ul>
 
     </nav>
+
+    <main>
+
+   
     <section  class="membership">
     <form method="GET" action="thankyou.html">
         <label class="myinput">First Name*<input id="fname" type="text" name="fname" required placeholder="First Name"></label>
@@ -99,7 +103,7 @@
             <li>Fee of $250/month</li>
         </ul>
     </section>
-
+</main>
      
     <footer>
         <div class="logo_img" >
