--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,6 +1,7 @@
 <!-- CHAMBER Page -->
  <!-- TO DO: delete the three pictures of people smiling at desk its no longer needed -->
-
+<!-- check meta tags and esnure the links are accurate to the specific page -->
+ 
 <!DOCTYPE html>
 <html lang="en">
 
