--- a/chamber/join.html
+++ b/chamber/join.html
@@ -12,7 +12,7 @@
                                 <!-- meta property tags -->
         <meta property = "og:title" content = "Pocatello Idaho USA Chamber of Commerce" >
         <meta property = "og:type"  content = "Website" >
-        <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/chamber/index.html"> 
+        <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/chamber/join.html"> 
         <meta property = "og:image" content = "images/poky-logo.webp" >
     
                                         <!-- CSS -->
@@ -56,9 +56,7 @@
 
     </nav>
 
-    <main>
-
-   
+    <main class="join_main">
     <section  class="membership">
     <form method="GET" action="thankyou.html">
         <label class="myinput">First Name*<input id="fname" type="text" name="fname" required placeholder="First Name"></label>
