updated images (hopefully)

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,7 +1,4 @@
 <!-- CHAMBER Page -->
- <!-- TO DO: delete the three pictures of people smiling at desk its no longer needed -->
-<!-- check meta tags and esnure the links are accurate to the specific page -->
- 
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,9 +18,7 @@
     <meta property = "og:image" content = "images/poky-logo.webp" >
 
                                     <!-- CSS -->
-                    <!-- TO DO: do i need a reset for my chamber?  -->
-    <!-- <link rel="stylesheet" href="styles/reset.css" > Runs first -->
-    <link rel="stylesheet" href="styles/normalize.css" > 
+    <link rel="stylesheet" href="styles/normalize.css" >  <!--Runs first -->
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="stylesheet" href="./styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">      <!-- Runs Last -->
@@ -82,8 +77,6 @@
             <h3>June 15, 2024 - Summer Sale Starts Today!</h3>
             <p>Our annual summer sale is live! Enjoy up to 50% off on selected items until July 15, 2024. Don’t miss out on these great deals!
             </p>
-            
-
         </section>
 
         <section class="extra">
@@ -110,11 +103,11 @@
             </div>
 
             <!-- From another week -->
-            <!-- <h2>Weather</h2>
+            <h2>Weather</h2>
             <p>current condition: <span id="current-conditions">partly cloudy></span></p>
             <p>current temp: <span id="temperature">20</span>&deg</p> 
             <p> cuurent wind: <span id="windspeed">10</span>MPH </p>
-            <p>windchill:<span id="windchill"></span></p> -->
+            <p>windchill:<span id="windchill"></span></p>
 
         </section>
 
