--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,6 +1,8 @@
 <!--  Chamber Directory -->
 <!-- resize images to less than 350px -->
+ <!-- add borders for members_cards -->
  <!-- change font size for h2  -->
+  <!-- if extra time, list view where you change the phone numbers to be a different color and add spacing where possible -->
 
 
 <!DOCTYPE html>
@@ -72,13 +74,20 @@
     </main>
       
     <footer>
+        
         <div class="logo_img" >
-            <img src="images/poky-logo.webp" alt="logo image">
+        <img src="images/poky-logo.webp" alt="logo image">
         </div>
 
-        <p>Pocatello Idaho Chamber of Commerce</p>
-        <p>123 main street</p>
-        <p>info@dontactuallyemail.com</p>
+        <div class="contact_info">
+            <p>Pocatello Idaho Chamber of Commerce</p>
+            <p>911 N 7th Avenue</p>
+            <p>Pocatello, ID 83201</p>  
+            <p><a href="mailto:info@cityofpocatello.com" target="_blank">info@cityofpocatello.com</a></p>
+            <p>208-234-6163</p>
+            <p> Feel free to contact whenever you'd like</p>
+        </div>
+
         <hr>
         <p>&copy; <span id='currentYear'></span>│Cayleigh Leishman │ Idaho, USA" │  </p> <!-- &copy is suposed to be the code that will give you the ©  symbol -->    
         <p id='lastModified'></p>
