Finishing touches (part 1)

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -38,8 +38,6 @@
         <button id="dark-mode"></button> 
         <div class="logo">
             <img src="images/poky-logo.webp" alt="logo image">
-            <!-- <img src="images/pocatello.jpg"> -->
-            <!-- <img src="https://pocatello.gov/ImageRepository/Document?documentID=7660" alt="Pocatello"> -->
             <h1>Pocatello Idaho Chamber of Commerce</h1>
         </div>
 
@@ -62,6 +60,7 @@
           <h3>Population: 89,995 </h3>
           <h3>Household Income: $65,435</h3>
           <h3>Median Age: 37yrs</h3>  
+          <hr>
           <a href="https://pocatello.gov/632/Demographics" >Pocatello Demographic source</a>
           <h3><span id="visit-message"></span></h3>
         </section>           
@@ -73,8 +72,14 @@
             </picture>
           </div>
             <div>
-                <h3>Pocatello Fake memorial</h3>
-                <p>This is such an important facet, ou see Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione aliquam dolorum voluptatibus aliquid deleniti obcaecati, fugiat impedit laborum vero? Ea atque dolorem natus fuga possimus neque voluptate repudiandae ex nostrum dignissimos? Nostrum odio dolorum similique aperiam ullam voluptate, numquam quis exercitationem repellendus. Sapiente, laudantium incidunt?</p>
+                <h3>Pine Ridge Mall</h3>
+                <p>Pine Ridge Mall in Pocatello is a bustling shopping destination, offering a wide variety
+                  of stores, from popular retail chains to unique local boutiques. The mall features
+                  a spacious food court, a modern cinema, and a lively entertainment zone with 
+                  arcade games and activities for all ages. With its convenient location and 
+                  diverse shopping and entertainment options, Pine Ridge Mall is the perfect place for 
+                  a day out with family and friends
+                </p>
             
             </div>
         </section>
@@ -85,20 +90,31 @@
             </picture>
           </div>
           <div>
-            <h3>fun Fact</h3>
-            
-            <p> </p>
+            <h3>Ross Park Swimming</h3>
+
+            <p>The Pocatello Swimming Pool, located in the heart of Pocatello, Idaho, 
+              is a state-of-the-art aquatic facility that has been a cornerstone of the
+              community since its grand opening in 2015. This modern swimming complex features
+              an Olympic-sized pool, a diving well, and a dedicated children's splash area,
+              making it a perfect destination for swimmers of all ages and skill levels. 
+            </p>
         </div>
         </section>
         <section class="discover-image">
           <div>
             <picture>
-              <img src="./images/clean-museum.webp" alt="Monkey Rock near pocatello" loading='lazy' height="419" width="800">
+              <img src="./images/clean-museum.webp" alt="Museum about history of cleaning" loading='lazy' height="419" width="800">
             </picture>
           </div>
           <div>
-            <h3>Importanat place</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi veritatis ea necessitatibus. Id accusamus aliquam suscipit? Quibusdam tenetur amet culpa voluptatem perspiciatis quae fugiat laudantium, ratione quod totam aut rem!</p>
+            <h3>Clean Museum</h3>
+            <p>
+              Welcome to the Clean Museum, where we explore the fascinating history and science 
+              of cleanliness and hygiene. Located in Pocatello, Idaho our interactive exhibits
+               highlight the evolution of sanitation practices from ancient times to the present
+                day. We offer engaging educational programs and community outreach to promote
+                the importance of hygiene in public health. Discover the clean side of history
+                with us and see how these practices have shaped our world.</p>
 >          </div>
         </section>
         <section class="discover-image">
@@ -109,19 +125,28 @@
           </div>
           <div>
             <h3>Real Archade Fun!</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae velit temporibus necessitatibus molestias beatae architecto saepe voluptatem deleniti veritatis maxime ut sequi, obcaecati dolorem minima nesciunt neque corporis aspernatur in inventore magni eligendi? Cum deleniti non repudiandae molestias veniam enim sed nobis ullam voluptate. Vel!</p>
+            <p>Welcome to Alien Arcade, where intergalactic adventures await! Our space-themed 
+              games transport you to distant planets, battling extraterrestrial foes and
+               navigating cosmic challenges. With immersive VR experiences, retro alien 
+               shooters, and out-of-this-world prizes, there's something for every space 
+               explorer. Come join us for an unforgettable journey beyond the stars!</p>
           </div>
         </section>
 
         <section class="discover-image">
             <div>
                 <picture>
-                    <img src="./images/discover/pocatello-dam.webp" alt="pocatello dam ruins" loading='lazy' height="533" width="800">
+                    <img src="./images/el-corporal.webp" alt="pocatello  ruins" loading='lazy' height="533" width="800">
                 </picture>
             </div>
             <div>
-                <h3>Pocatello Fun Fact</h3>
-                <p>totally fun facts you see Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, deserunt! Recusandae, illum nesciunt in aspernatur esse fugit hic id.</p>
+                <h3>Pocatello Restaruant</h3>
+                <p> Welcome to El corporal Mexicano in Pocatello, where authentic Mexican flavors
+                  come to life. Our vibrant menu features traditional dishes, from sizzling
+                  fajitas to savory enchiladas, all made with fresh, locally-sourced ingredients. 
+                  Enjoy a festive atmosphere with colorful décor and live mariachi music. Come experience
+                   the rich culinary heritage of Mexico right here in Pocatello!
+                </p>
             </div>
         </section>      
     </section>
