--- a/chamber/index.html
+++ b/chamber/index.html
@@ -81,6 +81,16 @@
 
         <section class="extra">
             <h2>Fun Fact of The Day</h2>
+            <h3>Bananas Are Berries!</h3>
+            <p> Botanically speaking, bananas are classified as berries, while strawberries are not.</p>
+                
+            <h3>Longest Place Name in idaho:</h3> 
+            <p> Idaho's longest city name is currently "Lava Hot Springs"</p>
+
+            <h3>Honey Never Spoils</h3>
+            <p>Archaeologists have found pots of honey in ancient Egyptian tombs that are over 3,000 years old and still perfectly edible.</p>
+
+            
         </section>
         <section class="events">
             <h2>Events!</h2>
