--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ for hamburger menu use " ☰ "  -->
                     <li><a href="https://codepen.io/Cayleigh-Secret/pen/abrvOXJ">lesson 04: Psuedo-Classes</a> </li>
                     
                     <li><b>Lesson 05 -</b></li>
-                    <li><a href="lesson05/BOM.html"> Book Of Mormon Top 10</a></li>
+                    <li><a href="lesson05/bom.html"> Book Of Mormon Top 10</a></li>
 
                     <li><b>Lesson 06 -</b></li>
                     <li><a href="lesson06/lesson06.html"> WebP Image File Format</a> </li>
