--- a/form.html
+++ b/form.html
@@ -65,7 +65,7 @@
                 <input type="password" id="password" name="password" required pattern="[A-Za-z0-9]{8,}">
             </label>
             <label>Repeat Password<sup class="redstar">*</sup> <span id="message"></span>
-                <input type="password" id="repeat" name="repeat" name="repeat" required>
+                <input type="password" id="repeat" name="repeat" required>
             </label>
             <label>Email 
                 <input type="text" id="email" name="email" pattern="[0-9a-zA-Z_.\-]+@byui\.edu" title="a valid BYU-I e-mail address">
