--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -62,7 +62,7 @@
     </nav>
 
     <main class="members_main"> 
-        <h1 class="title">Pocatello members</h1>
+        <h1 class="title">Pocatello Members</h1>
         <div id="members_buttons"> 
             <button id="members_grid">Grid</button> 
             <button id="members_list">List</button>   
