--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -62,10 +62,10 @@
           <h3>Median Age: 37yrs</h3>  
           <hr>
           <a href="https://pocatello.gov/632/Demographics" >Pocatello Demographic source</a>
-          <h3><span id="visit-message"></span></h3>
+          <h3> <span id="visit-message"></span> !</h3>
         </section>           
         <section class="discover-images">
-        <section class="discover-image">
+        <section class="discover-images">
           <div>
             <picture>
               <img src="./images/pine-ridge-mall.webp" alt="Veterans memorial at pocatello-Newdale Cemetery" loading='lazy' height="533" width="800">
