--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ for hamburger menu use " ☰ "  -->
                     <li><b>Lesson 09 -</b></li>
                     <li><a href="lesson09/prophets.html"> Prophets</a> </li>
                     <li><b>Lesson </b>
-                        <li><a href="chamber/weather.html">Weather API</a></li> 
+                        <li><a href="lesson10/weather.html">Weather API</a></li> 
                     
                     <li><a>Lesson 08 - </a><a href="#"></a> </li>
                     <li><a href="form.html">Form Page</a> </li>
@@ -141,7 +141,7 @@ for hamburger menu use " ☰ "  -->
                   <p>windchill:<span id="windchill"></span></p>
                   <hr>
                   <figure>
-                    <img id="weather-icon" src="" alt="weather-conditions">
+                    <img id="weather-icon" src="-" alt="weather-conditions">
                     <figcaption></figcaption>
                   </figure>
                   <hr> 
