--- a/weather.html
+++ b/weather.html
@@ -50,15 +50,17 @@
       <p>windchill:<span id="windchill"></span></p>
       <hr>
       <figure>
-        <img id="weather-icon" src="" alt="weather-conditions">
+        <img  src= "-" alt= "" id= "weather-icon">
         <figcaption></figcaption>
       </figure>
       <hr> 
       <p> Courtousy of OpenWeatherMap.org API Test </p>
+    </div>
 </main>
-  </body>
 <footer>
   Cayleigh Leishman | OpenWeatherMap.org | CC BY-SA 4.0
-</footer>
+</footer>  
+
 </body>
+
 </html>
