--- a/chamber/index.html
+++ b/chamber/index.html
@@ -69,7 +69,7 @@
               <p>windchill:<span id="windchill"></span></p>
               <hr>
               <figure>
-                <img id="weather-icon" src="" alt="weather-conditions">
+                <img id="weather-icon" src="-" alt="weather-conditions">
                 <figcaption></figcaption>
               </figure>
               <hr> 
