got rid of the comments and updated some small stuff

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,36 +1,28 @@
-<!--  Chamber Directory -->
-<!-- resize images to less than 350px -->
- <!-- add borders for members_cards -->
- <!-- change font size for h2  -->
-  <!-- if extra time, list view where you change the phone numbers to be a different color and add spacing where possible -->
-
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Directory of Pocatello</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Directory Page of Pocatello, Idaho - Chamber of Commerce</title>
 
-    <meta name="description" content = "WDD 230 -BYUI idaho-spring 1024 .">
+    <meta name="description" content = "Directory of Pocatello Idaho - Chamber of Commerce">
     <meta name="author" content="Cayleigh Leishman">
 
                             <!-- meta property tags -->
-    <meta property = "og:title" content = "Pocatello Idaho USA Chamber of Commerce" >
+    <meta property = "og:title" content = "Directory of Pocatello Idaho USA - Chamber of Commerce" >
     <meta property = "og:type"  content = "Website" >
-    <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/chamber/index.html"> 
+    <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/chamber/directory.html"> 
     <meta property = "og:image" content = "images/poky-logo.webp" >
 
                                     <!-- CSS -->
-    <link rel="stylesheet" href="styles/normalize.css" >  <!-- Runs first -->
+    <link rel="stylesheet" href="styles/normalize.css" > 
     
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/larger.css">      <!-- Runs Last -->
+    <link rel="stylesheet" href="styles/larger.css">    
 
                                  <!-- Java Script -->
-    <!-- <script src="scripts/hamburger.js" defer> </script> -->
     <script src="scripts/directory.js" defer></script>
     <script src="scripts/header-footer.js" defer></script>
                                     
@@ -86,7 +78,7 @@
         </div>
 
         <hr>
-        <p>&copy; <span id='currentYear'></span>│ Cayleigh Leishman │ Idaho, USA" │  </p> <!-- &copy is suposed to be the code that will give you the ©  symbol -->    
+        <p>&copy; <span id='currentYear'></span>│ Cayleigh Leishman │ Idaho, USA" │  </p>    
         <p id='lastModified'></p>
 
     </footer>
