--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,27 +1,25 @@
-<!-- Chamber Discover page -->
-<!-- see if you can figure out how to change the layout of .discover-main in one of the media query when browser is 800px or less -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pocatello, Idaho Chamber of Commerce</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Discover Page of Pocatello, Idaho - Chamber of Commerce</title>
 
-    <meta name="description" content = "WDD 230 -BYUI idaho-spring 1024 .">
+    <meta name="description" content = "Discover What can be found in the Wonderful Pocatello Idaho - Chamber Of Commerce Page">
     <meta name="author" content="Cayleigh Leishman">
 
                             <!-- meta property tags -->
-    <meta property = "og:title" content = "Pocatello Idaho USA Chamber of Commerce - discover page" >
+    <meta property = "og:title" content = "Pocatello Idaho USA Chamber of Commerce - Discover page" >
     <meta property = "og:type"  content = "Website" >
     <meta property = "og:url"   content = "https://cayleighleishman.github.io/wdd230/chamber/discover.html"> 
     <meta property = "og:image" content = "images/poky-logo.webp" >
 
                                     <!-- CSS -->
-    <link rel="stylesheet" href="styles/normalize.css" >  <!-- Runs first -->
+    <link rel="stylesheet" href="styles/normalize.css" >  
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/larger.css">      <!-- Runs Last -->
+    <link rel="stylesheet" href="styles/larger.css">      
 
                                  <!-- Java Script -->
     <script src="scripts/hamburger.js" defer></script>
@@ -38,7 +36,7 @@
         <button id="dark-mode"></button> 
         <div class="logo">
             <img src="images/poky-logo.webp" alt="logo image">
-            <h1>Pocatello Idaho Chamber of Commerce</h1>
+            <h1>Pocatello Idaho - Chamber of Commerce</h1>
         </div>
 
     </header>
@@ -68,7 +66,7 @@
         <section class="discover-images">
           <div>
             <picture>
-              <img src="./images/pine-ridge-mall.webp" alt="Veterans memorial at pocatello-Newdale Cemetery" loading='lazy' height="533" width="800">
+              <img src="./images/pine-ridge-mall.webp" alt="Pine Ridge Mall Indoors" loading='lazy' height="533" width="800">
             </picture>
           </div>
             <div>
@@ -86,7 +84,7 @@
         <section class="discover-image">
           <div>
             <picture>
-              <img src="./images/ross-park-swim.webp" alt="Dry farms near pocatello" loading='lazy' height="449" width="800">
+              <img src="./images/ross-park-swim.webp" alt="Ross Park Swimming Area" loading='lazy' height="449" width="800">
             </picture>
           </div>
           <div>
@@ -103,7 +101,7 @@
         <section class="discover-image">
           <div>
             <picture>
-              <img src="./images/clean-museum.webp" alt="Museum about history of cleaning" loading='lazy' height="419" width="800">
+              <img src="./images/clean-museum.webp" alt="Clean Museum" loading='lazy' height="419" width="800">
             </picture>
           </div>
           <div>
@@ -120,7 +118,7 @@
         <section class="discover-image">
           <div>
             <picture>
-              <img src="./images/Outer-Limits-Logo_200_glow.webp" alt="Moody creek biking trails" loading='lazy' height="533" width="800">
+              <img src="./images/outer-limits-logo_200_glow.webp" alt="Outer Limits Archade Logo" loading='lazy' height="533" width="800">
             </picture>
           </div>
           <div>
@@ -136,7 +134,7 @@
         <section class="discover-image">
             <div>
                 <picture>
-                    <img src="./images/el-corporal.webp" alt="pocatello  ruins" loading='lazy' height="533" width="800">
+                    <img src="./images/el-corporal.webp" alt="El Corporal Mexican Restaruant logo" loading='lazy' height="533" width="800">
                 </picture>
             </div>
             <div>
@@ -169,7 +167,7 @@
         </div>
 
         <hr>
-        <p>&copy; <span id='currentYear'></span>│Cayleigh Leishman │ Idaho, USA" │  </p> <!-- &copy is suposed to be the code that will give you the ©  symbol -->    
+        <p>&copy; <span id='currentYear'></span>│Cayleigh Leishman │ Idaho, USA" │  </p>    
         <p id='lastModified'></p>
        
     </footer>
