updated final touches part 3

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,6 +61,7 @@
         <section class="weather">
             <h2>Weather</h2>
             <div class="weather_main">
+                
               <p>Current Temperature: <span id="temperature"></span>&deg;</p>
               <p> current wind: <span id="windspeed"></span> MPH </p>
               <p>windchill:<span id="windchill"></span></p>
@@ -69,6 +70,10 @@
                 <img id="weather-icon" src="-" alt="weather-conditions">
                 <figcaption></figcaption>
               </figure>
+              <hr>
+              <h3>Three Day Forecast</h3>                                
+                    <section id="forecast">
+                    </section>
               <hr> 
               <p> Courtousy of OpenWeatherMap.org API Test </p>
               
