Update - home page

--- a/a-final-project/index.html
+++ b/a-final-project/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     
  
-    <meta charset="UTF-8">
-    <meta name="viewport"    content = "width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport"    content = "width=device-width, initial-scale=1">
     <meta name="description" content = "Discounted Loungefly Backpacks and Walletes found here!">
     <meta name="author"      content = "Cayleigh Leishman">
     <title>Enchanted Backpacks</title>
@@ -12,7 +12,7 @@
                     <!-- Social Media Meta Tags -->
     <meta property = "og:type" content = "Website" >
     <meta property = "og:url"   content = "Insert Github link for page here">
-    <meta property = "og:image" content = "insert Github logo link" >
+    <meta property = "og:image" content = "https://raw.githubusercontent.com/CayleighLeishman/wdd230/main/a%20final%20project/images/enchanted-logo.webp" >
 
                         <!-- CSS -->
     <link rel="stylesheet" href="styles/normalize.css" >  
